See xref:http.adoc[HTTP Support] for more information.

[[x6.4-general]]
=== General Changes

[[x6.4-remote-files-changes]]
=== Remote File Adapters Changes

The `AbstractRemoteFileStreamingMessageSource` has now a convenient `clearFetchedCache()` API to remove references from cache for not processed remote files.
The references stay in cache because polling configuration does not allow to process all the fetched in one cycle, and the target `SessionFactory` might be changed between polling cycles, e.g. via `RotatingServerAdvice`.

[[x6.4-jdbc-changes]]
=== JDBC Changes

The `LobHandler` (and respective API) has been deprecated for removal in Spring Framework `6.2`.
Respective option on `JdbcMessageStore` (and similar) have been deprecated as well.
The byte array handling for serialized message is fully deferred to JDBC driver.

The `LockRepository.delete()` method return the result of removing ownership of a distributed lock.
And the `JdbcLockRegistry.JdbcLock.unlock()` method throws `ConcurrentModificationException` if the ownership of the lock is expired.
See xref:jdbc.adoc[JDBC Support] for more information.

[[x6.4-zeromq-changes]]
=== ZeroMQ Changes

The outbound component `ZeroMqMessageHandler` (and respective API) can now bind a TCP port instead of connecting to a given URL.
See xref:zeromq.adoc[ZeroMQ Support] for more information.

[[x6.4-redis-changes]]
=== Redis Changes

Instead of throwing `IllegalStateException`, the `RedisLockRegistry.RedisLock.unlock()` method throws `ConcurrentModificationException` if the ownership of the lock is expired.
See xref:redis.adoc[Redis Support] for more information.

[[x6.4-groovy-changes]]
=== Groovy Changes

The `ControlBusFactoryBean` (and respective `<int-groovy:control-bus>` XML tag) has been deprecated (for removal) in favor of new introduced `ControlBusFactoryBean` based on a new model implemented in the `ControlBusCommandRegistry`.
See xref:control-bus.adoc[Control Bus] for more information.