@@ -60,3 +60,9 @@ See xref:redis.adoc[Redis Support] for more information.
 
 The `ControlBusFactoryBean` (and respective `<int-groovy:control-bus>` XML tag) has been deprecated (for removal) in favor of new introduced `ControlBusFactoryBean` based on a new model implemented in the `ControlBusCommandRegistry`.
 See xref:control-bus.adoc[Control Bus] for more information.
+
+[[x6.4-sftp-changes]]
+=== SFTP Support Changes
+
+The `DefaultSftpSessionFactory` now exposes a `Consumer<SshClient>` configurer property to further customize an internal `SshClient`.
+See xref:sftp/session-factory.adoc[SFTP Session Factory] for more information.
